[add] change in Item, add new field donePieces, remove productionDone. New calculation. Change because can make several pieces from all.